<resources>
    <string name="app_name">CheckCode</string>
    <string name="scan_button_text">Escanear</string>
    <string name="flashlight_text">Linterna</string>
    <string name="voiceAlert_text">Alerta de Voz</string>
    <string name="goBack_text">Retroceder</string>
    <string name="test_mode">Modo de Prueba</string>
    <string name="real_mode">Modo Real</string>
    <string name="ticket_invalid">Entrada Inválida</string>
    <string name="ticket_scanned">Entrada ya ha sido procesada</string>
    <string name="ticket_valid">Entrada Valida</string>
    <string name="dialog_title">Resultados</string>
    <string name="dialog_wait">Recibiendo datos…</string>
    <string name="dialog_Ticket"> codigo </string>
    <string name="dialog_name">tipo </string>
    <string name="dialog_cant">cantidad </string>
    <string name="ready">Listo</string>
    <string name="information">INFORMACIÓN</string>
    <string name="img_warning">Precaución</string>
    <string name="btn_addEvento">añadir evento nuevo</string>
    <string name="logo">logo app</string>
    <string name="txt_btn_addEvent">CREAR EVENTO</string>
    <string name="btn_ViewEvent">Mis eventos</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
