<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_event">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/logo_layout"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="0.4"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnScanner"
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_rectangle"
                android:elevation="20dp"
                android:onClick="onClick"
                android:text="@string/scan_button_text"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/btn_view_events"
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_rectangle"
                android:elevation="20dp"
                android:text="@string/eventos"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="244dp"
                android:layout_height="18dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:text="@string/txt_btn_addEvent"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btn_view_events"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent" />


            <ImageButton
                android:id="@+id/btnShowDialog"
                android:layout_width="205dp"
                android:layout_height="75dp"
                android:background="@color/transparent"
                android:contentDescription="@string/btn_addEvento"
                android:layout_gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintVertical_bias="0.931"
                app:srcCompat="@drawable/ic_add_circle_black_24dp" />


        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>